<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marqumil.kaloriapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_landingPageActivity"
            app:destination="@id/landingPageActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.marqumil.kaloriapp.ui.history.HistoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.marqumil.kaloriapp.ui.notifications.StatisticFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_statistic" >
        <action
            android:id="@+id/action_navigation_statistic_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <activity
        android:id="@+id/landingPageActivity"
        android:name="com.marqumil.kaloriapp.ui.landingPage.LandingPageActivity"
        android:label="activity_landing_page"
        tools:layout="@layout/activity_landing_page" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.marqumil.kaloriapp.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>